--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,3 @@
 # test executable
 add_executable("tests" "tests.cpp")
-target_link_libraries("tests" PRIVATE lisa)
+target_link_libraries("tests" PRIVATE pylisa)
