--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,7 +10,7 @@ set(RELATIVE_PATH "src")
 # Add files
 if(FILES)
 	#if files is not empty:
-	target_sources(lisa PRIVATE ${FILES})
+	target_sources(pylisa PRIVATE ${FILES})
 	
 	# if we want to install files:
 	# this will be installed to CMAKE_INSTALL_PREFIX/src
