fixed segfault bug in mie.c

--- a/pylisa/Makefile
+++ b/pylisa/Makefile
@@ -1,5 +1,5 @@
 LDFLAGS := -lm
-CFLAGS := -std=c99 -Wall -Wextra -pedantic -fPIC -O2
+CFLAGS := -std=c99 -Wall -Wextra -pedantic -fPIC -O2 #-g
 
 ifeq ($(OS_OPTION), windows)
 	GXX := x86_64-w64-mingw32-gcc
@@ -12,10 +12,21 @@ else
 	EXT := so
 endif
 
-mie: mie.c
+all: test_mie mie_so
+
+test_mie: test_mie.o mie.o
+	$(GXX) $^ $(LDFLAGS) -o $@
+
+test_mie.o: test_mie.c mie.h
+	$(GXX) $(CFLAGS) -c $< -o $@
+
+mie.o: mie.c mie.h
+	$(GXX) $(CFLAGS) -c $< -o $@
+
+mie_so: mie.c mie.h
 	$(GXX) $(CFLAGS) $(LDFLAGS) -shared $< -o mie.$(EXT)
 
 clean:
-	rm -rf *.o *.exe *.so *.dll
+	rm -rf *.o *.exe *.so *.dll *.dylib test_mie
 
 .PHONY: clean all
